# jupyter-env-whitelist

./: .bumpversion.cfg  .travis.yml  README.md  pyproject.toml  setup.cfg  tasks.py
jupyter_env_whitelist/: __init__.py  whitelist.py
jupyter_whitelist_env/: __init__.py
tests/: test_jupyter_env_whitelist.py  test_jupyter_whitelist_env.py  test_whitelist.py
