[tool.poetry]
name = "jupyter-env-whitelist"
version = "0.1.1"
description = ""
authors = ["Daisuke Taniwaki <daisuketaniwaki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
autoflake = "^1.4"
brunette = "^0.1.7"
isort = "^5.6.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"
pytest-html = "^3.0.0"
pytest = "^6.1.2"
bump2version = "^1.0.1"
codecov = "^2.1.10"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
