[tool.poetry]
name = "jupyter-env-whitelist"
version = "0.2.0"
description = ""
authors = ["Daisuke Taniwaki <daisuketaniwaki@gmail.com>"]
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Framework :: IPython",
  "Framework :: Jupyter",
]

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
autoflake = "^1.4"
brunette = "^0.1.7"
isort = "^5.6.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"
pytest-html = "^3.0.0"
pytest = "^6.1.2"
bump2version = "^1.0.1"
codecov = "^2.1.10"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
